2019-12-10 Magnus Hagdorn
 * piccolo3/precord.py: add logging; use CLI option class to handle command
   line options
 * piccolo3/client/PiccoloClientCfg.py: new module for handling CLI options

2019-12-10 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: introduce new base class that just
   handles the logging; add method to cancel running tasks; handle
   cancelled observations
 * piccolo3/client/__init__.py: add logging to PiccoloSystem class; add 
   method to shutdown piccolo system

2019-12-09 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: turn property into co-routine

2019-11-14 Mangus Hagdorn
 * piccolo-example.py: add simple example script

2019-11-14 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: add method to create tasks
 * piccolo3/client/Piccolo.py: use method to create tasks
 * piccolo3/client/PiccoloDataDir.py: ditto
 * piccolo3/client/PiccoloScheduler.py: ditto
 * piccolo3/client/PiccoloSpectrometer.py: ditto

2019-11-12 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: add property to check whether client
   is connected

2019-11-08 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: when getting protocol to talk to
   piccolo server test connection, retry until it works

2019-08-02 Magnus Hagdorn
 * piccolo3/client/PiccoloScheduler.py: add functionality to
   suspend/unsuspend/delete jobs

2019-08-02 Magnus Hagdorn
 * piccolo3/client/PiccoloScheduler.py: add functionality to get list of jobs

2019-07-30 Magnus Hagdorn
 * piccolo3/client/__init__.py: setup piccolo scheduler
 * piccolo3/client/PiccoloScheduler.py: add new module to handle piccolo
   scheduler

2019-05-17 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: observe spectrometer status

2019-04-24 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: pass target saturation as argument

2019-04-24 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add methods to handle numSequences,
   autointegration, delay and target settings; make all arguments to