@@ -32,6 +32,7 @@ setup(
     entry_points={
         'console_scripts': [
             'piccolo3-record = piccolo3.precord:main',
+            'piccolo3-integration-times = piccolo3.ptimes:main',
             ],
     },
 
